Update ru.json (POEditor.com)

--- a/exercises/ng2ts/i18n/ru.json
+++ b/exercises/ng2ts/i18n/ru.json
@@ -1,4 +1,7 @@
 {
+    "HI": {
+        "Hello \nWorld": "Привет Мир!"
+    },
     "Buy awesome speakers on our web site.": "Купите офигенские колонки на нашем сайте",
     "Check out our web site": "Зацените наш сайт!",
     "days": "дней",
