Update ru.json (POEditor.com)

--- a/exercises/ng2ts/i18n/ru.json
+++ b/exercises/ng2ts/i18n/ru.json
@@ -1,8 +1,8 @@
 {
-    "Buy awesome speakers on our web site.": "Buy awesome speakers on our web site.",
-    "Check out our web site": "Check out our web site",
-    "days": "days",
-    "years ago": "years ago",
+    "Buy awesome speakers on our web site.": "Купите офигенские колонки на нашем сайте",
+    "Check out our web site": "Зацените наш сайт!",
+    "days": "дней",
+    "years ago": "лет назад",
     "There is actually no simple way to test it, just make sure it looks nice :)": "Мы не придумали как это тестировать, убедитесь чтобы все выглядело норм",
     "Create a class called 'Codelab'": "Создайте класс и назовите его ",
     "Export the class": "Export the class",
