--- a/src/exercises/ng2ts/i18n/en.json
+++ b/src/exercises/ng2ts/i18n/en.json
@@ -3,13 +3,14 @@
   "Check out our web site": "Check out our web site",
   "days": "days",
   "years ago": "years ago",
+  "Intro to TypeScript": "Intro to TypeScript",
   "Intro": "Intro",
   "Angular/TypeScript CodeLab!": "Angular/TypeScript CodeLab!",
   "In this codelab we're going to learn the basics of TypeScript and Angular.": "In this codelab we're going to learn the basics of TypeScript and Angular.",
   "This is a beta version of the codelab with limited access, please don't share it publically (yet).": "This is a beta version of the codelab with limited access, please don't share it publically (yet).",
   "This codelab is very new and only covers the basics of Angular. Please leave your feedback (in the end) and come back for more advanced exercises later.": "This codelab is very new and only covers the basics of Angular. Please leave your feedback (in the end) and come back for more advanced exercises later.",
   "We're using Angular version 2.3.0": "We're using Angular version 2.3.0",
-  "The slides for the codelab are available using\n          <a href = \"https://docs.google.com/presentation/d/1Wh4ZwTKG1h66f3mTD4GQO8rKwGDEJeBSvUDJ3udU1LA/edit?usp=sharing\">here</a>.": "The slides for the codelab are available using\n          <a href = \"https://docs.google.com/presentation/d/1Wh4ZwTKG1h66f3mTD4GQO8rKwGDEJeBSvUDJ3udU1LA/edit?usp=sharing\">here</a>.",
+  "The slides for the codelab are available using\n          <a href = \"https://docs.google.com/presentation/d/1Wh4ZwTKG1h66f3mTD4GQO8rKwGDEJeBSvUDJ3udU1LA/edit?usp=sharing\">this link</a>.": "The slides for the codelab are available using\n          <a href = \"https://docs.google.com/presentation/d/1Wh4ZwTKG1h66f3mTD4GQO8rKwGDEJeBSvUDJ3udU1LA/edit?usp=sharing\">this link</a>.",
   "TypeScript": "TypeScript",
   "We created a TypeScript file for you, now let's add our first TS class\n           called Codelab.": "We created a TypeScript file for you, now let's add our first TS class\n           called Codelab.",
   "It will take a list of guests, and will have a 'getGuestsComing' method, which will only return people who're coming.": "It will take a list of guests, and will have a 'getGuestsComing' method, which will only return people who're coming.",
@@ -22,7 +23,7 @@
   "Create a NgModule": "Create a NgModule",
   "Bootstrap the NgModule": "Bootstrap the NgModule",
   "Create a component": "Create a component",
-  "Let's create our first component!": "Let's create our first component!",
+  "Create first Angular component!": "Create first Angular component!",
   "Now we got the component, we need to pass it to a NgModule.": "Now we got the component, we need to pass it to a NgModule.",
   "Bootstrap the module": "Bootstrap the module",
   "Now we got both NgModule and component ready, let's bootstrap the app!": "Now we got both NgModule and component ready, let's bootstrap the app!",
